@@ -3,17 +3,21 @@ if(NOT USE_MODULES)
         "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/libout123/modules/$<$<STREQUAL:${DEFAULT_OUTPUT_MODULE},dummy>:dummy.c>"
         "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/libout123/modules/$<$<STREQUAL:${DEFAULT_OUTPUT_MODULE},coreaudio>:coreaudio.c>"
         "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/libout123/modules/$<$<STREQUAL:${DEFAULT_OUTPUT_MODULE},alsa>:alsa.c>"
+        "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/libout123/modules/$<$<STREQUAL:${DEFAULT_OUTPUT_MODULE},tinyalsa>:tinyalsa.c>"
         "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/libout123/modules/$<$<STREQUAL:${DEFAULT_OUTPUT_MODULE},pulse>:pulse.c>"
         "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/libout123/modules/$<$<STREQUAL:${DEFAULT_OUTPUT_MODULE},win32>:win32.c>"
         "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/libout123/modules/$<$<STREQUAL:${DEFAULT_OUTPUT_MODULE},win32_wasapi>:win32_wasapi.c>")
     target_link_libraries(defaultmodule PUBLIC
         $<$<STREQUAL:${DEFAULT_OUTPUT_MODULE},alsa>:ALSA::ALSA>
+        $<$<STREQUAL:${DEFAULT_OUTPUT_MODULE},tinyalsa>:${TINYALSA_LIBRARIES}>
         $<$<STREQUAL:${DEFAULT_OUTPUT_MODULE},coreaudio>:${AUDIO_TOOLBOX}>
         $<$<STREQUAL:${DEFAULT_OUTPUT_MODULE},pulse>:${PULSE_LIBRARIES}>
         $<$<STREQUAL:${DEFAULT_OUTPUT_MODULE},win32>:${WIN32_LIBRARIES}>
         $<$<STREQUAL:${DEFAULT_OUTPUT_MODULE},win32_wasapi>:${WIN32_WASAPI_LIBRARIES}>)
-    if(${DEFAULT_OUTPUT_MODULE} STREQUAL "pulse")
+    if(DEFAULT_OUTPUT_MODULE STREQUAL "pulse")
         target_compile_definitions(defaultmodule PRIVATE ${PULSE_CFLAGS})
+    elif(DEFAULT_OUTPUT_MODULE STREQUAL "tinyalsa")
+        target_compile_definitions(defaultmodule PRIVATE ${TINYALSA_CFLAGS})
     endif()
 else()
     set(CMAKE_SHARED_MODULE_PREFIX "")
@@ -38,9 +42,19 @@ else()
     list(FIND OUTPUT_MODULES pulse INDEX)
     if(NOT INDEX EQUAL -1)
         add_library(output_pulse MODULE "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/libout123/modules/pulse.c")
-        target_compile_definitions(output_pulse PRIVATE ${PULSE_CFLAGS})
+        target_compile_options(output_pulse PRIVATE ${PULSE_CFLAGS})
         target_link_libraries(output_pulse PRIVATE ${PULSE_LIBRARIES})
         install(TARGETS output_pulse
+            ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}"
+            LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}"
+            RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/${PROJECT_NAME}")
+    endif()
+    list(FIND OUTPUT_MODULES tinyalsa INDEX)
+    if(NOT INDEX EQUAL -1)
+        add_library(output_tinyalsa MODULE "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../src/libout123/modules/tinyalsa.c")
+        target_compile_options(output_tinyalsa PRIVATE ${TINYALSA_CFLAGS})
+        target_link_libraries(output_tinyalsa PRIVATE ${TINYALSA_LIBRARIES})
+        install(TARGETS output_tinyalsa
             ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}"
             LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}"
             RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/${PROJECT_NAME}")
